--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
 
-  get: ^4.6.1
+#  get: ^4.6.1
   smooth_page_indicator: ^1.0.0+2
   sizer: ^2.0.15
   dio: ^4.0.4
